[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
libreauth = "0.17"
anyhow = { version = "1", features = ["backtrace"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets", "tls"] }
common = { version = "*", path = "../common" }
serde_json = "1.0"
rand = "0.9"
web-push = "0.11"
base64-url = "3"
log = "0.4"
