[package]
name = "common"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bson = "2"
getrandom = { version = "0.2", features = ["js"] }
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
