[package]
name = "common"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bson = "2"
log = "0.4"
# Leaving at 0.2 because 0.3 changed how configuring for js works
getrandom = { version = "0.2", features = ["js"] }
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
