[package]
name = "common"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bson = { version = "3", features = ["serde"] }
log = "0.4"
getrandom = { version = "0.4", features = ["wasm_js"] }
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
