[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
common = { version = "*", path = "../common" }
serde_json = "1.0.82"
stylist = "0.10"
web-sys = { version = "0.3", features = ["EventSource", "EventSourceInit", "Notification", "NotificationPermission", "ServiceWorker", "Navigator", "Window", "ServiceWorkerContainer", "PushManager", "ServiceWorkerRegistration", "PushSubscriptionOptionsInit"] }
gloo-events = "0.1"
bson = "2.4.0"
base64 = "0.13.0"
js-sys = "0.3"
dioxus = { version = "0.2", features = ["web"] }
dioxus-router = "0.2"
futures = "0.3"
log = "0.4"
wasm-logger = "0.2"
